fix(BottomSheet): adjust color for dark mode

--- a/packages/themes/src/morpheme/_bottom-sheet.dark.scss
+++ b/packages/themes/src/morpheme/_bottom-sheet.dark.scss
@@ -2,11 +2,11 @@
 
 .dark {
   .v-bottom-sheet {
-    --v-bottom-sheet-bg-color: var(--color-gray-true-800);
+    --v-bottom-sheet-bg-color: var(--color-gray-true-900);
     --v-bottom-sheet-body-color: var(--color-gray-true-200);
 
     // handle
-    --v-bottom-sheet-handle-bg-color: var(--color-gray-true-700);
+    --v-bottom-sheet-handle-bg-color: var(--color-gray-true-600);
 
     &-close-icon {
       color: var(--color-gray-true-300);
